Removed log outputs